// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeWithConfigFile for ignore files empty provided 1`] = `
"# managed by skuba
node_modules*/
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files empty provided 2`] = `
"# managed by skuba
node_modules*/
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files identical 1`] = `
"# managed by skuba
node_modules*/
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files identical 2`] = `
"# managed by skuba
node_modules*/
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and additional lines 1`] = `
".idea
.vscode

# managed by skuba
node_modules*/
# end managed by skuba

.DS_Store
node_modules
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and additional lines 2`] = `
".idea
.vscode

# managed by skuba
node_modules*/
# end managed by skuba

.DS_Store
node_modules
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and fully superseded config 1`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and fully superseded config 2`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and partially superseded config 1`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba

system32

*.zip
"
`;

exports[`mergeWithConfigFile for ignore files provided with managed section and partially superseded config 2`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba

system32

*.zip
"
`;

exports[`mergeWithConfigFile for ignore files provided with no managed section 1`] = `
"# managed by skuba
node_modules*/
# end managed by skuba

.DS_Store
"
`;

exports[`mergeWithConfigFile for ignore files provided with no managed section 2`] = `
"# managed by skuba
node_modules*/
# end managed by skuba

.DS_Store
"
`;

exports[`mergeWithConfigFile for ignore files provided with outdated managed section 1`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files provided with outdated managed section 2`] = `
"# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba
"
`;

exports[`mergeWithConfigFile for ignore files provided with outdated managed section and additional lines 1`] = `
".idea
.vscode

# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba

.DS_Store
node_modules
"
`;

exports[`mergeWithConfigFile for ignore files provided with outdated managed section and additional lines 2`] = `
".idea
.vscode

# managed by skuba
node_modules*/
.DS_Store
# end managed by skuba

.DS_Store
node_modules
"
`;

exports[`mergeWithConfigFile for workspace files empty provided 1`] = `
"# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  # end managed by skuba
"
`;

exports[`mergeWithConfigFile for workspace files identical 1`] = `
"# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  # end managed by skuba
"
`;

exports[`mergeWithConfigFile for workspace files provided with managed section and additional lines 1`] = `
"anotherSetting:true
# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  # end managed by skuba
  - x"
`;

exports[`mergeWithConfigFile for workspace files provided with no managed section 1`] = `
"# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  # end managed by skuba

packages:
  - a
"
`;

exports[`mergeWithConfigFile for workspace files provided with outdated managed section 1`] = `
"# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  - '*eslint*'
  # end managed by skuba
"
`;

exports[`mergeWithConfigFile for workspace files provided with outdated managed section and additional lines 1`] = `
"anotherSetting:true
# managed by skuba
packageManagerStrictVersion: true
publicHoistPattern:
  - '@types*'
  - '*eslint*'
  # end managed by skuba
  - x"
`;
